--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-div {
+.tile {
     display: flex;
     width: 50px;
     height: 50px;
     background-color: white;
     
 }
-.bigDiv {
+.tileContainer {
     display: flex;
+    
     width:800px;
     
 }
@@ -15,4 +16,10 @@ div {
 }
 body{
     background-color: aqua;
+}
+ul{
+    list-style: none;
+}
+.container{
+    display: flex;
 }
