--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .tile {
     display: flex;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     background-color: white;
     
 }
 .tileContainer {
     display: flex;
+    margin: 20px;
     
-    width:800px;
     
 }
 .blue{
