--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 .tile {
-    display: flex;
+    
     
     background-color: white;
     
 }
+
+header{
+    text-align: center;
+    font-size: x-large;
+    font-weight: bolder;
+}
 .tileContainer {
     display: flex;
     margin: 20px;
-    
+    width: 500px;
+    height: 500px;
     
 }
 .blue{
     background-color: black;
 }
 body{
-    background-color: aqua;
+    background-color: rgb(176, 223, 231);
 }
 ul{
     list-style: none;
@@ -23,4 +30,35 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+  }
